# TUGASAKHIR-MINTIX

./: .gitignore  Anchor.toml  README.md  check-pubkey.js  docker-compose.yml  package-lock.json  package.json  tsconfig.json
app/: .env.production  config-overrides.js  package-lock.json  package.json  tailwind.config.js  vercel.json
app/src/: App.css  App.js  idl.json
app/src/components/: ConcertList.js  CreateConcert.js  EditConcertModal.js  ExplorePage.js  MintTicket.js  MyTickets.js  PendingConcerts.js  SeatSelector.js  TicketDetail.js  TicketMarketplace.js  VerifyTicket.js
app/src/components/admin/: AdminApprovedConcerts.jsx  AdminConcertApproval.jsx  AdminLayout.jsx  AdminLoginModal.jsx  AdminNavbar.jsx  AdminRejectedConcerts.jsx  AdminSettings.jsx
app/src/components/common/: EditConcertModal.js  (+5 more)
app/src/config/: environment.js
app/src/context/: ConcertContext.jsx
app/src/pages/: ConcertDetail.jsx  HomePage.jsx  MyTicketsPage.jsx
app/src/services/: ApiService.js  AuthService.js  blockchain.js  socketService.js
app/src/utils/: adminAuth.js  anchor.js  formats.js  mockDataHelper.js  ticketValidator.js
backend/: .env  .env.railway.example  package-lock.json  package.json
backend/src/: server.js
backend/src/config/: db.js
backend/src/controllers/: authController.js
backend/src/middleware/: auth.js
backend/src/routes/: tickets.js
backend/src/services/: websocketService.js
programs/concert_nft_tickets/: Cargo.toml
programs/concert_nft_tickets/src/: lib.rs
scripts/: interact.js
src/: idl.json
tests/: concert_nft_tickets.ts
(+8 files in other folders)
