[package]
name = "concert_nft_tickets"
version = "0.1.0"
description = "NFT Ticket for Concerts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "concert_nft_tickets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["token"] }
solana-program = "=1.16.0"